care-australia-uat/force-app/main/default/objects/Stripe_Decline_Code__mdt/Stripe_Decline_Code__mdt.object-meta.xml
<CustomObject>
    <label>Stripe Decline Code</label>
    <pluralLabel>Stripe Decline Codes</pluralLabel>
</CustomObject>