care-australia-uat/force-app/main/default/objects/Stripe_Decline_Code__mdt/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <label>DESCRIPTION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>