care-australia-uat/force-app/main/default/objects/Stripe_Decline_Code__mdt/fields/NEXT_STEPS__c.field-meta.xml
<CustomField>
    <fullName>NEXT_STEPS__c</fullName>
    <label>NEXT STEPS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>