care-australia-uat/force-app/main/default/objects/Stripe_Decline_Code__mdt/fields/PAYMENT_RESULT__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT_RESULT__c</fullName>
    <label>PAYMENT RESULT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fail Soft</fullName>
                <default>true</default>
                <label>Fail Soft</label>
            </value>
            <value>
                <fullName>Fail Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>