care-australia-uat/force-app/main/default/objects/Stripe_Decline_Code__mdt/listViews/Decline_Codes.listView-meta.xml
<ListView>
    <fullName>Decline_Codes</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>DESCRIPTION__c</columns>
    <columns>NEXT_STEPS__c</columns>
    <columns>PAYMENT_RESULT__c</columns>
    <filterScope>Everything</filterScope>
    <label>Decline Codes</label>
    <language>en_US</language>
</ListView>